--- a/laravel-survey/vue/package.json
+++ b/laravel-survey/vue/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.21",
     "@heroicons/vue": "^2.1.3",
+    "axios": "^1.7.2",
     "vue": "^3.4.21",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
